Added the two classes "Customer" and "Purchase".

--- a/ElectricBuggyBusiness/ElectricBuggyBusiness.vcxproj.filters
+++ b/ElectricBuggyBusiness/ElectricBuggyBusiness.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="ElectricBuggyBusiness.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Customer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Purchase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Customer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Purchase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
