--- a/ElectricBuggyBusiness/ElectricBuggyBusiness.vcxproj
+++ b/ElectricBuggyBusiness/ElectricBuggyBusiness.vcxproj
@@ -127,7 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Customer.cpp" />
     <ClCompile Include="ElectricBuggyBusiness.cpp" />
+    <ClCompile Include="Purchase.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Customer.h" />
+    <ClInclude Include="Purchase.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
